# typst_font_manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: command.rs  font_manager.rs  main.rs  main_backup.rs  parse_font_config.rs  process_font.rs
src/utils/: font_utils.rs  mod.rs
