[package]
name = "typst_font_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
typst = { git = "https://github.com/typst/typst", branch = "main" }
fontdb = "0.23"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.2"
reqwest = { version = "0.12", features = ["blocking"] }



[[bin]]
name = "typfont" # Specify the desired binary name here
path = "src/main.rs"



