[package]
name = "typst_font_manager"
version = "0.2.0"
edition = "2024"
description = "A CLI tool to manage fonts for Typst projects"
license = "GPL-3.0"
repository = "https://github.com/hooyuser/typst_font_manager"
readme = "README.md"
keywords = ["cli", "tool", "typst", "font"]
categories = ["command-line-utilities"]

[dependencies]
typst = "0.15" # typst = { git = "https://github.com/typst/typst", branch = "main" }
fontdb = "0.23"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
colored = "3.1"
reqwest = { version = "0.13", features = ["blocking"] }

[dev-dependencies]
dotenv = "0.15"

[[bin]]
name = "typfont" # Specify the desired binary name here
path = "src/main.rs"

[package.metadata.binstall]
bin = ["typfont"]



